--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,4 +20,4 @@ Giản đơn dung dị mẹ là mẹ thôi<br>
 Con đi khắp chân trời góc bể<br>
 Ân tình nào sánh xuể mẹ yêu<br>
 Nghĩa dày độ lượng bao nhiêu<br>
-Có trong lòng mẹ sớm chiều bao dung.</p>
+Có trong lòng mẹ sớm chiều bao dung</p>
